--- a/clean_architecture/pubspec.yaml
+++ b/clean_architecture/pubspec.yaml
@@ -28,10 +28,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.3
+  dartz: ^0.9.2
+  flutter_modular: ^3.3.1
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mocktail: ^0.1.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
