--- a/clean_architecture/pubspec.yaml
+++ b/clean_architecture/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
-  dartz: ^0.9.2
+  dartz: ^0.10.0-nullsafety.2
   flutter_modular: ^3.3.1
   http: ^0.13.3
 
