--- a/clean_architecture/pubspec.yaml
+++ b/clean_architecture/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   dartz: ^0.10.0-nullsafety.1
   flutter_modular: ^3.3.1
   http: ^0.13.3
+  flutter_triple: ^1.2.4+3
+
 
 dev_dependencies:
   flutter_test:
